fix dark mode toggle

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -712,10 +712,6 @@ video {
   display: inline-block;
 }
 
-.inline {
-  display: inline;
-}
-
 .flex {
   display: flex;
 }
@@ -772,42 +768,16 @@ video {
   width: 16rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-14 {
   width: 3.5rem;
 }
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-max {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-px {
-  width: 1px;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-48 {
-  width: 12rem;
 }
 
 .max-w-\[250px\] {
@@ -885,10 +855,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
 }
 
 .border-4 {
@@ -1110,11 +1076,6 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1255,35 +1216,9 @@ video {
   background-color: rgb(61 90 128 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-primary-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 251 252 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-primary-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(152 193 217 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-secondary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(238 108 77 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-opacity-80:hover {
-  --tw-bg-opacity: 0.8;
-}
-
-.hover\:bg-opacity-20:hover {
-  --tw-bg-opacity: 0.2;
-}
-
-.hover\:bg-opacity-50:hover {
-  --tw-bg-opacity: 0.5;
-}
-
-.hover\:bg-opacity-70:hover {
-  --tw-bg-opacity: 0.7;
 }
 
 .hover\:bg-opacity-40:hover {
@@ -1363,29 +1298,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-light-50 {
-  --tw-text-opacity: 1;
-  color: rgb(248 250 252 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-tertiary-100 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.dark .dark\:hover\:bg-primary-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 251 252 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-primary-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(152 193 217 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-secondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 108 77 / var(--tw-bg-opacity));
 }
 
 .dark .group:hover .dark\:group-hover\:text-primary {
